--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,12 @@ repository = "https://github.com/ikornaselur/notiflux"
 actix = "0.13.3"
 actix-web = "4"
 actix-web-actors = "4.3.0"
+base64 = "0.22.0"
+dotenvy = "0.15.7"
 env_logger = "0.11.3"
+jsonwebtoken = "9.3.0"
 log = "0.4.21"
+serde = "1.0.197"
 serde_json = "1.0.114"
 ulid = "1.1.2"
 
