--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/ikornaselur/notiflux"
 actix = "0.13.3"
 actix-web = "4"
 actix-web-actors = "4.3.0"
+anyhow = "1.0.81"
 base64 = "0.22.0"
 dotenvy = "0.15.7"
 env_logger = "0.11.3"
